# example-word-frequency

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/example_word_frequency/: __main__.py  cli.py
